Fix hero spacing

--- a/client/styles/pages/splash.less
+++ b/client/styles/pages/splash.less
@@ -106,13 +106,13 @@
 
   // Header
   .header {
-    padding: 90px 0 0 0;
+    padding: 130px 0 0 0;
     background: @splash-theme-color-2;
     overflow: hidden;
   }
   h1 {
     font-weight: 400;
-    font-size: 37px;
+    font-size: 36px;
     line-height: 51px;
     margin: 0 0 30px 0;
     outline: none;
@@ -124,7 +124,7 @@
   }
   h2 {
     font-weight: 400;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 28px;
     margin: 20px 0 0 0;
     letter-spacing: 0.3px;
@@ -149,7 +149,7 @@
   .nav-link {
     color: @splash-font-color;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 30px;
     display: inline-block;
     margin-top: 8px;
